Added music player due to practice 4 task

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -25,5 +24,9 @@
             android:id="@+id/nav_browser"
             android:icon="@drawable/ic_baseline_open_in_browser_24"
             android:title="@string/menu_browser" />
+        <item
+            android:id="@+id/nav_player"
+            android:icon="@drawable/ic_baseline_library_music_24"
+            android:title="@string/nav_player" />
     </group>
 </menu>
