--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,4 +32,9 @@
         android:name="ru.mirea.netelev.mireaproject.WebViewFragment"
         android:label="@string/menu_browser"
         tools:layout="@layout/fragment_web_view" />
+    <fragment
+        android:id="@+id/nav_player"
+        android:name="ru.mirea.netelev.mireaproject.MusicFragment"
+        android:label="fragment_music"
+        tools:layout="@layout/fragment_music" />
 </navigation>
