--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -41,5 +41,13 @@
             android:id="@+id/nav_audio"
             android:icon="@drawable/ic_baseline_mic_24"
             android:title="@string/menu_audio" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/menu_settings" />
+        <item
+            android:id="@+id/nav_story"
+            android:icon="@drawable/ic_baseline_slideshow_24"
+            android:title="@string/menu_story" />
     </group>
 </menu>
