--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,4 +52,14 @@
         android:name="ru.mirea.netelev.mireaproject.AudioFragment"
         android:label="@string/menu_audio"
         tools:layout="@layout/fragment_audio" />
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="ru.mirea.netelev.mireaproject.SettingsFragment"
+        android:label="@string/menu_settings"
+        tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/nav_story"
+        android:name="ru.mirea.netelev.mireaproject.story.StoryFragment"
+        android:label="@string/menu_story"
+        tools:layout="@layout/fragment_story" />
 </navigation>
