--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -49,5 +49,9 @@
             android:id="@+id/nav_story"
             android:icon="@drawable/ic_baseline_slideshow_24"
             android:title="@string/menu_story" />
+        <item
+            android:id="@+id/nav_info"
+            android:icon="@drawable/ic_baseline_info_24"
+            android:title="@string/menu_info" />
     </group>
 </menu>
