--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -53,5 +52,9 @@
             android:id="@+id/nav_info"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/menu_info" />
+        <item
+            android:id="@+id/nav_time"
+            android:icon="@drawable/ic_baseline_history_24"
+            android:title="@string/time_hint" />
     </group>
 </menu>
