--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -56,5 +56,9 @@
             android:id="@+id/nav_time"
             android:icon="@drawable/ic_baseline_history_24"
             android:title="@string/time_hint" />
+        <item
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_baseline_map_24"
+            android:title="@string/menu_map" />
     </group>
 </menu>
